# uiux-rule-tool

./: README.md  pyproject.toml  tool.py
examples/: README.md  sample-guidelines.md
examples/routing-demo/: mixed.md
examples/routing-demo/component-rules/: button.md
examples/routing-demo/foundation-rules/: tokens.md
examples/routing-demo/global-layout-rules/: layout.md
src/uiux_rule_agent/: llm_extractor.py
src/uiux_rule_tool/: __init__.py  cli.py  config.py  css_parser.py  extractors.py  ingest.py  llm_extractor.py  models.py  official_specs.py  writer.py
tests/: test_pipeline.py
