[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "uiux-rule-tool"
version = "0.1.0"
description = "从本地 Markdown 文件或目录中生成原子化 UI/UX 规范规则。"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
uiux-rule-tool = "uiux_rule_tool.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
